--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ after_success:
 - git push -f "https://${REPO_TOKEN}@${GH_REF}" master:gh-pages
 env:
   global:
-  - GH_REF: github.com:Uheinanba/blogsite.git
+  - GH_REF: github.com/Uheinanba/blogsite.git
