--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 install:
 - npm install
 script:
-- npm run docs:build
+- npm run build
 after_success:
 - cd .vuepress/dist
 - git init
